--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     ],
     "require": {
         "php": ">=5.6",
-        "illuminate/support": "^5.0"
+        "illuminate/support": "^5.0",
+        "symfony/http-foundation": "~3.3"
     },
     "autoload": {
         "psr-4": {
